# sql-mcp-server

./: .gitignore  LICENSE  README.md  db.py  pyproject.toml  server.py
.github/workflows/: publish.yml
