[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "MCP server that connects Claude to a Microsoft SQL Server database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
]