[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "MCP server that connects Claude to a Microsoft SQL Server database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Snehangshu" },
]
keywords = ["mcp", "sql-server", "claude", "database", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sql-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "db.py"]